--- a/index.html
+++ b/index.html
@@ -4,5 +4,10 @@
   </HEAD>
   <body>
    <h1>Happy Holi</h1>
+   <h2>Happy Holi</h2>
+   <h3>Happy Holi</h3>
+   <h4>Happy Holi</h4>
+   <h5>Happy Holi</h5>
+   <h6>Happy holi</h6>
  </body>
 </HTML>
