--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
    <title>This is my first page</title>
   </HEAD>
   <body>
-   <h1>Happy Holi</h1>
-   <h2>Happy Holi</h2>
-   <h3>Happy Holi</h3>
-   <h4>Happy Holi</h4>
-   <h5>Happy Holi</h5>
-   <h6>Happy holi</h6>
+   <h1>Holi ki Hardik Shubkamanya</h1>
+   <tr>
+    <td>
+     
+     name
+     
+    </td>
+    <td>
+     Shiavni Agrawal
+    </td>
+   </tr>
  </body>
 </HTML>
