--- a/index.html
+++ b/index.html
@@ -4,15 +4,10 @@
   </HEAD>
   <body>
    <h1>Holi ki Hardik Shubkamanya</h1>
+   <table width="100%">
    <tr>
-    <td>
-     
-     name
-     
-    </td>
-    <td>
-     Shiavni Agrawal
-    </td>
+    <td> name</td><td>Shiavni Agrawal</td>
    </tr>
+   </table>
  </body>
 </HTML>
