--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </HEAD>
   <body>
    <h1>Holi ki Hardik Shubkamanya</h1>
-   <table width="100%">
+   <table width="100%" Border="1">
    <tr>
     <td> name</td><td>Shiavni Agrawal</td>
    </tr>
