--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <body>
    <h1>Holi ki Hardik Shubkamanya</h1>
    <table width="100%" Border="1">
-   <tr>
-    <td> name</td><td>Shiavni Agrawal</td>
+   <tr><td> name</td><td>Shiavni Agrawal</td>
    </tr>
    </table>
  </body>
