--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <body>
    <h1>Holi ki Hardik Shubkamanya</h1>
    <table width="100%" Border="1">
-   <tr><td> name</td><td>Shiavni Agrawal</td>
-   </tr>
+   <tr><td> name</td><td>Shiavni Agrawal</td></tr>
+    <tr><td>Address</td><td>ABES College</td></tr>
+    <tr><td>contact</td><td>87656466</td></tr>
    </table>
  </body>
 </HTML>
