--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <HEAD>
    <title>This is my first page</title>
   </HEAD>
-  <body style="background-color:lightblue;text-align-center">
+  <body style="background-color:lightblue text-align:center">
    <h1>Holi ki Hardik Shubkamanya</h1>
    <table width="100%" Border="1">
    <tr><td> name</td><td>Shiavni Agrawal</td></tr>
