--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <title>This is my first page</title>
   </HEAD>
   <body style="background-color:lightblue;text-align:center">
-   <h1>Holi ki Hardik Shubkamanya</h1>
+   <p><h1>ABES COLLEGE</h1</p>
    <table width="100%" Border="1">
    <tr><td> name</td><td>Shiavni Agrawal</td></tr>
     <tr><td>Address</td><td>ABES College</td></tr>
