--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
 <HTML>
  <HEAD>
-   <title>This is my first page</title>
-  </HEAD>
-  <body style="background-color:lightblue;text-align:center">
-   <p><strong>ABES COLLEGE</strong></p>
-   <table width="100%" Border="1">
-   <tr><td> name</td><td>Shiavni Agrawal</td></tr>
-    <tr><td>Address</td><td>ABES College</td></tr>
-    <tr><td>contact</td><td>87656466</td></tr>
-   </table>
-   <iframe src="https://www.TMU.ac.in"height="800px" widhth="500px"></iframe>
- </body>
+   <link rel="icon" type="icon" href="favicon.ico">
+  <title>My First web site</Title>
+  </head>
+ <Body>
+ </Body>
 </HTML>
