--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <HTML>
  <HEAD>
    <link rel="icon" type="icon" href="favicon.ico">
-  <title>My First web site</Title>
+  <title>My First web site</title>
   </head>
  <Body>
+  <h1> Hello</h1>
  </Body>
 </HTML>
