--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <title>My First web site</title>
   </head>
  <Body>
-  <h1> Hello</h1>
+  <div id+"Header">
+   <table width="100%" border="1">
+   <tr><td width="40%"><img src="images.jpg"></td>
+    <td width="40%">Home</td>
+    <td width="40%">About</td>
+    <td width=40%">Contact</td>
+  </tr>
+ </div>
+                  
+  
  </Body>
 </HTML>
